[gd_scene load_steps=5 format=2]

[ext_resource path="res://alata-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://menu/Menu.gd" type="Script" id=2]
[ext_resource path="res://background.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 1 )

[node name="Menu" type="Node2D"]
script = ExtResource( 2 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 514.828, 301.2 )
scale = Vector2( 0.430766, 0.303852 )
texture = ExtResource( 3 )

[node name="MenuLabel" type="RichTextLabel" parent="."]
anchor_right = 1.0
margin_left = 18.3555
margin_top = 16.7999
margin_right = 500.355
margin_bottom = 99.7999
custom_fonts/normal_font = SubResource( 1 )
text = "Transformasi dan Elips
Muhammad Fauzan Lubis - 191524026"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Button" type="Button" parent="."]
margin_left = 46.8904
margin_top = 377.838
margin_right = 246.891
margin_bottom = 436.838
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="Button"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 51.0
margin_top = 10.0
margin_right = -41.0002
margin_bottom = -12.0
custom_fonts/normal_font = SubResource( 1 )
text = "Triangle"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Button2" type="Button" parent="."]
margin_left = 406.048
margin_top = 376.779
margin_right = 606.049
margin_bottom = 435.779
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="Button2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 49.0594
margin_top = 11.0
margin_right = -42.9408
margin_bottom = -11.0
custom_fonts/normal_font = SubResource( 1 )
text = "Rhombus"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Button3" type="Button" parent="."]
margin_left = 766.266
margin_top = 375.719
margin_right = 966.266
margin_bottom = 434.719
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="Button3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = 10.0
margin_right = -9.00018
margin_bottom = -12.0
custom_fonts/normal_font = SubResource( 1 )
text = "Random Ellipse"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Button4" type="Button" parent="."]
margin_left = 49.0093
margin_top = 482.903
margin_right = 249.01
margin_bottom = 541.903
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="Button4"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 44.0
margin_top = 11.0
margin_right = -36.0002
margin_bottom = -11.0
custom_fonts/normal_font = SubResource( 1 )
text = "Kelopak 4"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Button5" type="Button" parent="."]
margin_left = 407.108
margin_top = 481.963
margin_right = 607.108
margin_bottom = 540.963
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="Button5"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 44.0
margin_top = 11.0
margin_right = -36.0002
margin_bottom = -11.0
custom_fonts/normal_font = SubResource( 1 )
text = "Kelopak 8"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Button6" type="Button" parent="."]
margin_left = 766.504
margin_top = 482.022
margin_right = 966.504
margin_bottom = 541.022
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="Button6"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 70.0
margin_top = 11.0
margin_right = -66.0002
margin_bottom = -11.0
custom_fonts/normal_font = SubResource( 1 )
text = "Batik"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Button7" type="Button" parent="."]
margin_left = 405.167
margin_top = 270.962
margin_right = 605.167
margin_bottom = 329.962
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="Button7"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 34.1675
margin_top = 11.1189
margin_right = -23.8327
margin_bottom = -10.8811
custom_fonts/normal_font = SubResource( 1 )
text = "Family Crest"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Button7" to="." method="_on_Button7_pressed"]
